fixed last request being cut off

--- a/client/src/components/pages/RequestMatch.css
+++ b/client/src/components/pages/RequestMatch.css
@@ -13,7 +13,7 @@
   float: left;
   position: relative;
   column-width: 250px;
-  column-gap: 20px;
+  column-gap: 0px;
   overflow-x: scroll;
   overscroll-behavior-x: contain;
   overscroll-behavior-y: auto;
@@ -59,7 +59,7 @@
   text-align: center;
   height: 90%;
   border-radius: 43px;
-  width: 230px;
+  width: 225px;
   padding: 20px;
   overflow-y: auto;
 }
@@ -89,8 +89,8 @@
   text-align: center;
   height: 90%;
   border-radius: 43px;
-  width: 230px;
-  padding: 20px;
+  width: 225px;
+  /* padding: 20px; */
   overflow-y: auto;
 }
 
